Add config and test initial functionality for blog only

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: base
 title: Aero Fleet One | Agricultural Aviation | Drone Application
 description: A company dedicated to consolidating and invigorating the aerial application industry.
 parallax: True
+home: True
 ---
 
 <!-- assign variable to invalidate cache upon each new build -->
