--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@ parallax: true
             {
                 'type': 'TeamMember',
                 'properties': {
-                    'name': '{{i.name}}',
+                    'name': '{{i.full_name}}',
                     'iconSize': [60, 60],
                     'iconUrl': '{{i.img}}',
                     'title': '{{i.title}}'
@@ -156,18 +156,18 @@ parallax: true
     <div
             class="row row-cols-1 row-cols-md-3 g-4 justify-content-center py-5"
         >
-            {% for i in data.about.team.items %}
+            {% for i in site.data.staff.items %}
             {% if i.active %}
             <div class="col">
                 <div class="card h-100">
                     <img
                         src="{{i.img}}"
                         class="card-img-top"
-                        alt="{{i.name}}"
+                        alt="{{i.full_name}}"
                     />
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title mb-1 fw-bold">
-                            {{i.name}}
+                            {{i.full_name}}
                             {% if i.linkedin %}
                             <span>
                                 <a href="{{i.linkedin}}" target="_blank">
