--- a/blog.html
+++ b/blog.html
@@ -36,7 +36,7 @@ parallax: true
                 </div>
                 <div class="col-md-9 mt-3">
                     <h2>{{i.title}}</h2>
-                    <p>{{i.content|truncatewords: 20}}</p>
+                    <p>{{i.content|strip_html|truncatewords: 20}}</p>
                     <p><a class="stretched-link" href="{{i.url|remove: "index.html"}}">Read More ></a></p>
                 </div>
             </div>
