Fix heading order

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@ parallax: true
 >
     <div class="p-3">
         <h1>{{data.about.heading}}</h1>
-        <h3 class="text-white">{{data.about.subheading}}</h3>
+        <h2 class="h3 text-white">{{data.about.subheading}}</h2>
     </div>
 </div>
 
