--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@ parallax: true
 >
     <div class="p-3">
         <h1>{{data.blog.heading}}</h1>
-        <h3 class="text-white">{{data.blog.subheading}}</h3>
+        <h2 class="h3 text-white">{{data.blog.subheading}}</h2>
     </div>
 </div>
 
