--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ site.data.general.items %}
 >
     <div class="p-3">
         <h1>{{data.home.top.headline}}</h1>
-        <h3 class="text-white">{{data.home.top.subline}}</h3>
+        <h2 class="h3 text-white">{{data.home.top.subline}}</h2>
         <p>
             <a
                 href="{{data.home.top.button.url}}"
