--- a/media.html
+++ b/media.html
@@ -17,7 +17,7 @@ curator: True
 >
     <div class="p-3">
         <h1>{{data.media.heading}}</h1>
-        <h3 class="text-white">{{data.media.subheading}}</h3>
+        <h2 class="h3 text-white">{{data.media.subheading}}</h2>
     </div>
 </div>
 
