--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ site.data.general.items %}
         <h2 class="fs-1 pt-5 my-5 text-white">{{data.home.blog.heading}}</h2>
         <div class="row mt-5">
             {% for i in site.posts limit:3 %}
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mt-5">
                 <a href="{{i.url}}">
                     <div
                         class="position-relative py-3"
@@ -123,12 +123,12 @@ site.data.general.items %}
                                 alt="{{i.title}}"
                                 src="{% if i.img %}{{i.img}}{% else %}/assets/img/agricultural-aircraft-crop-seeding.jpg{% endif %}"
                                 style="
-                                    height: 100%;
+                                    height: 140px;
                                     width: 100%;
                                     object-fit: cover;
                                 "
                             />
-                            <h3 class="mt-3 fs-2 text-left fw-semibold">
+                            <h3 class="mt-3 fs-4 text-left fw-semibold">
                                 {{i.title}}
                             </h3>
                             <p class="text-white">
