Improve blog section layout on index

--- a/connect.html
+++ b/connect.html
@@ -8,6 +8,13 @@ description: Schedule a meeting instantly with one of our team members.
 {% assign data = site.data.general.items %}
 
 <div class="container py-5">
+    <div class="cognito mt-5">
+        <script src="https://www.cognitoforms.com/s/BBy50UCGvki5p8LjilJQxQ"></script>
+        <script>
+            Cognito.load("forms", { id: "1" });
+        </script>
+    </div>
+
     <section class="text-center">
         <h1>{{data.connect.heading}}</h1>
         <h2>{{data.connect.calendly.heading}}</h2>
