--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@ site.data.general.items %}
     class="py-5 my-5"
     style="background-image: url('{{data.home.blog.img}}');background-size: cover;background-position: bottom"
 >
-    <div class="container" style="min-height: 60vh">
-        <h2 class="fs-1 pt-5 my-5 text-white">{{data.home.blog.heading}}</h2>
-        <div class="row mt-5">
+    <div class="container pb-5 mb-5" style="min-height: 60vh">
+        <h2 class="fs-1 pt-5 text-white">{{data.home.blog.heading}}</h2>
+        <div class="row mt-1">
             {% for i in site.posts limit:3 %}
-            <div class="col-md-4 mt-5">
+            <div class="col-md-4 mb-5 mt-3">
                 <a href="{{i.url}}">
                     <div
                         class="position-relative py-3"
