--- a/index.html
+++ b/index.html
@@ -60,12 +60,13 @@ site.data.general.items %}
                 %}
             "
         >
-            <p class="fs-2 fw-semibold py-5 px-2 px-sm-5">{{i.text}}</p>
+            <p class="fs-1 fw-semibold py-5 px-2 px-sm-5">{{i.text}}</p>
         </div>
     </div>
     {% endfor %}
+
     <div class="row justify-content-center mt-5 pt-5">
-        <div class="col-md-6 align-self-center px-3 px-sm-5">
+        <div class="col-md-6 align-self-center px-3 mb-4 px-sm-5">
             <h3 class="fs-2 fw-semibold">
                 {{data.home.galleries.about.heading}}
             </h3>
