--- a/blog.html
+++ b/blog.html
@@ -13,11 +13,15 @@ parallax: true
     data-image-src="/assets/img/smart-farming-technology-in-agriculture.jpg"
     data-parallax="scroll"
     data-position="top"
-    style="height: 60vh"
+    style="height: 70vh"
 >
-    <div class="p-3">
-        <h1>{{data.blog.heading}}</h1>
-        <h2 class="h3 text-white">{{data.blog.subheading}}</h2>
+    <div class="container">
+        <div class="row p-3 mt-3 justify-content-center">
+            <div class="col-md-8">
+                <h1>{{data.blog.heading}}</h1>
+                <h2 class="h3 text-white">{{data.blog.subheading}}</h2>
+            </div>
+        </div>
     </div>
 </div>
 
