--- a/index.html
+++ b/index.html
@@ -15,31 +15,35 @@ site.data.general.items %}
     data-image-src="/assets/img/agricultural-aircraft-crop-dusting.jpg"
     data-parallax="scroll"
     data-position="top"
-    style="height: 60vh"
+    style="height: 70vh"
 >
-    <div class="p-3">
-        <h1>{{data.home.top.headline}}</h1>
-        <h2 class="h3 text-white">{{data.home.top.subline}}</h2>
-        <p>
-            <a
-                href="{{data.home.top.button.url}}"
-                class="mt-4 btn btn-lg fw-semibold fs-4 btn-primary"
-            >
-                {{data.home.top.button.text}}
-            </a>
-        </p>
+    <div class="container">
+        <div class="row p-3 mt-3 justify-content-center">
+            <div class="col-md-8">
+                <h1>{{data.home.top.headline}}</h1>
+                <h2 class="h3 text-white">{{data.home.top.subline}}</h2>
+                <p>
+                    <a
+                        href="{{data.home.top.button.url}}"
+                        class="mt-4 btn btn-lg fw-semibold fs-4 btn-primary"
+                    >
+                        {{data.home.top.button.text}}
+                    </a>
+                </p>
+            </div>
+        </div>
     </div>
 </div>
 
-<div class="container py-5 my-5">
+<div class="container py-5">
     <div class="row justify-content-center">
-        <div class="col-lg-6 col-md-8 col-sm-10">
+        <div class="col-sm-10">
             <h2 class="fs-1">{{data.home.boilerplate.text}}</h2>
         </div>
     </div>
 </div>
 
-<div class="container py-5 my-5">
+<div class="container py-5">
     {% for i in data.home.galleries.items %} {% assign test =
     forloop.index|modulo: 2 %}
     <div class="row mt-4 justify-content-center">
