Fix media heading

--- a/media.html
+++ b/media.html
@@ -18,7 +18,7 @@ curator: True
     <div class="container">
         <div class="row p-3 mt-3 justify-content-center">
             <div class="col-md-8">
-                <h1s>{{data.media.heading}}</h1>
+                <h1>{{data.media.heading}}</h1>
                 <h2 class="h3 text-white">{{data.media.subheading}}</h2>
             </div>
         </div>
