--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ site.data.general.items %}
     style="height: 70vh"
 >
     <div class="container">
-        <div class="row p-3 mt-3 justify-content-center">
+        <div class="row p-lg-3 p-1 mt-3 justify-content-center">
             <div class="col-md-8">
                 <h1>{{data.home.top.headline}}</h1>
                 <h2 class="h3 text-white">{{data.home.top.subline}}</h2>
