Fix mapbox team map

--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@ parallax: true
                 },
                 'geometry': {
                     'type': 'Point',
-                    'coordinates': ['{{i.map.long}}','{{i.map.lat}}']
+                    'coordinates': ['{{i.long}}','{{i.lat}}']
                 }
             }{% unless forloop.last %},{% endunless %}
             {% endif %}
