Fix title, update readme, take out old site title from config

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: base
-title: Aero Fleet One | Agricultural Aviation | Drone Application
+title: Aero Fleet One | Agricultural Aviation | Crop Protection Services
 description: A company dedicated to consolidating and invigorating the aerial application industry.
 parallax: True
 home: True
