--- a/index.html
+++ b/index.html
@@ -1,183 +1,1 @@
----
-layout: base
-title: Aero Fleet One | Agricultural Aviation | Crop Protection Services
-description: A company dedicated to consolidating and invigorating the aerial application industry.
-parallax: True
-home: True
----
-
-<!-- assign variable to invalidate cache upon each new build -->
-{% assign cache_buster = site.time | date: '%s%N' %} {% assign data =
-site.data.general.items %}
-
-<div
-    class="parallax-window d-flex align-items-center justify-content-center"
-    data-image-src="/assets/img/agricultural-aircraft-crop-dusting.jpg"
-    data-parallax="scroll"
-    data-position="top"
-    style="height: 70vh"
->
-    <div class="container">
-        <div class="row p-lg-3 p-2 mt-5 mt-lg-3 justify-content-center">
-            <div class="col-md-8">
-                <h1 class="mt-3 mt-lg-0">{{data.home.top.headline}}</h1>
-                <h2 class="h3 text-white">{{data.home.top.subline}}</h2>
-                <p>
-                    <a
-                        href="{{data.home.top.button.url}}"
-                        class="mt-4 btn btn-lg fw-semibold fs-4 btn-primary"
-                    >
-                        {{data.home.top.button.text}}
-                    </a>
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="container py-5">
-    <div class="row justify-content-center">
-        <div class="col-sm-10">
-            <h2 class="fs-1">{{data.home.boilerplate.text}}</h2>
-        </div>
-    </div>
-</div>
-
-<div class="container py-5">
-    {% for i in data.home.galleries.items %} {% assign test =
-    forloop.index|modulo: 2 %}
-    <div class="row mt-4 justify-content-center">
-        <div class="col-md-6 order-xs-last px-0 px-sm-3">
-            <img src="{{i.src}}" alt="{{i.text}}" class="img-fluid" />
-        </div>
-        <div
-            class="
-                col-md-6
-                align-self-center
-                {%
-                if
-                test
-                ==
-                0
-                %}order-sm-first{%
-                endif
-                %}
-            "
-        >
-            <p class="fs-1 fw-semibold py-5 px-2 px-sm-5">{{i.text}}</p>
-        </div>
-    </div>
-    {% endfor %}
-
-    <div class="row justify-content-center mt-5 pt-5">
-        <div class="col-md-6 align-self-center px-3 mb-4 px-sm-5">
-            <h3 class="fs-2 fw-semibold">
-                {{data.home.galleries.about.heading}}
-            </h3>
-            <p class="mt-4">{{data.home.galleries.about.text}}</p>
-            <p class="mt-4">
-                <a
-                    href="{{data.home.galleries.about.button.url}}"
-                    class="btn btn-primary fw-semibold"
-                >
-                    {{data.home.galleries.about.button.text}}
-                </a>
-            </p>
-        </div>
-        <div class="col-md-6 px-0 px-sm-3">
-            <img
-                src="{{data.home.galleries.about.img}}"
-                alt="{{i.text}}"
-                class="img-fluid"
-            />
-        </div>
-    </div>
-</div>
-
-<div
-    class="py-5 my-5"
-    style="background-image: url('{{data.home.blog.img}}');background-size: cover;background-position: bottom"
->
-    <div class="container pb-5 mb-5" style="min-height: 60vh">
-        <h2 class="fs-1 pt-5 text-white">{{data.home.blog.heading}}</h2>
-        <div class="row mt-1">
-            {% for i in site.posts limit:3 %}
-            <div class="col-md-4 mb-5 mt-3">
-                <a href="{{i.url}}">
-                    <div
-                        class="position-relative py-3"
-                        style="min-height: 350px"
-                    >
-                        <div
-                            class="
-                                p-4
-                                d-flex
-                                flex-column
-                                position-absolute
-                                text-white
-                                w-100
-                            "
-                            style="
-                                background-color: rgba(128, 128, 128, 0.65);
-                                top: 0;
-                                left: 0;
-                            "
-                        >
-                            <img
-                                class="img-fluid"
-                                alt="{{i.title}}"
-                                src="{% if i.img %}{{i.img}}{% else %}/assets/img/agricultural-aircraft-crop-seeding.jpg{% endif %}"
-                                style="
-                                    height: 140px;
-                                    width: 100%;
-                                    object-fit: cover;
-                                "
-                            />
-                            <h3 class="mt-3 fs-4 text-left fw-semibold">
-                                {{i.title}}
-                            </h3>
-                            <p class="text-white">
-                                {{i.content|strip_html|truncatewords: 20}}
-                            </p>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            {% endfor %}
-        </div>
-    </div>
-</div>
-
-<div class="container py-5 my-5">
-    <div class="row align-items-center">
-        <div
-            id="messageCol"
-            class="col-md-6 h-100 d-inline-block"
-            style="background-image: url('{{data.home.message.img}}');background-position: bottom left;"
-        >
-            <h2 class="text-white fs-1 mt-5 pt-5 ms-5 ps-5">
-                {{data.home.message.heading}}
-            </h2>
-        </div>
-        <div class="col-md-6 pt-5">{% include contact.html %}</div>
-    </div>
-</div>
-
-<div class="bg-primary py-5 text-white text-center">
-    <div class="container py-3">
-        <h3>Follow us on social media</h3>
-        <p class="mb-0">
-            {% for i in site.social_media %}
-            <a
-                href="{{i.url}}"
-                target="_blank"
-                class="me-3"
-                aria-label="{{i.name}}"
-                rel="noopener"
-            >
-                <i class="bi-{{i.name|downcase}} text-white fs-1"></i>
-            </a>
-            {% endfor %}
-        </p>
-    </div>
-</div>
+<html>AFO site under maintenance</html>
